# mike-t-oznn-super-cool-tools

./: .env.example  .gitignore  .plan  Cargo.toml  PRODUCT.md  README.md  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tools-registry.toml
crates/toolbox-core/: Cargo.toml
crates/toolbox-core/src/: context.rs  error.rs  lib.rs  registry.rs  tool.rs  types.rs
crates/toolbox-shell/: Cargo.toml
crates/toolbox-shell/src/: main.rs  registry.rs  tool_host.rs
crates/toolbox-shell/styles/: app.css
crates/tools/calculator/: Cargo.toml
crates/tools/calculator/src/: lib.rs  state.rs
docs/: ADDING_A_TOOL.md
e2e/: calculator-smoke.spec.js
scripts/: build-tailwind.sh  wasm-pack
tools/calculator/: Cargo.toml
tools/calculator/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
