[package]
name = "calculator"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
js-sys = "0.3.82"
wasm-bindgen = "0.2.121"
web-sys = { version = "0.3.82", features = ["Element", "Event", "EventTarget", "HtmlElement", "KeyboardEvent", "Node", "Window"] }
